titlebar hover effect

--- a/app-source/scss/partials/_interface.scss
+++ b/app-source/scss/partials/_interface.scss
@@ -24,9 +24,9 @@ body {
 	position: relative;
 	z-index: 1;
 	
-	&:hover {
+	&.hover {
 		
-		box-shadow: 0 .75px 0 var(--header-border), 0 1.5px 1px var(--header-border);
+		box-shadow: 0 .5px 0 var(--header-border), 0 .75px 1px var(--header-border);
 	}
 }
 
