--- a/app-source/scss/partials/_interface.scss
+++ b/app-source/scss/partials/_interface.scss
@@ -93,44 +93,6 @@ footer {
 		&:first-of-type { margin-bottom: 16px; }
 	}
 	
-	.search-field {
-		
-		height: 40px;
-		padding: 8px 0;
-		position: relative;
-		
-		#search {
-			
-			color: var(--text-color);
-			width: 100%;
-			height: 22px;
-			font-size: 13px;
-			padding: 0 24px;
-			background: #ffffff var(--icon-search) no-repeat left 5px center;
-			border: 1px solid #b9b9b9;
-			border-radius: 3px;
-			box-shadow: inset 0 0 0 1px rgba(0,0,0,0.05);
-			
-			&:focus {
-				
-				outline: none;
-				border-color: var(--accent);
-				box-shadow: 0 0 3px 1px var(--accent-light);
-			}
-		}
-		
-		#clear {
-			
-			display: none;
-			width: 20px;
-			height: 20px;
-			background: var(--icon-clear) no-repeat center;
-			position: absolute;
-			top: 9px;
-			right: 11px;
-		}
-	}
-	
 	button {
 		
 		border: 0;
@@ -156,7 +118,7 @@ footer {
 		&.selected:focus {
 			
 			color: #fff;
-			background-color: var(--accent-light);
+			background-color: var(--accent);
 		}
 	}
 	
@@ -170,20 +132,31 @@ footer {
 			text-overflow: ellipsis;
 			background-position: left 8px center;
 			background-repeat: no-repeat;
+			position: relative;
 			
-			&#cat-all	{ background-image: var(--all); }
-			&#cat-fav	{ background-image: var(--favorite); }
-			&#cat-none	{
+			&::before {
 				
-				background-image: var(--none);
-				background-position-x: 10px;
+				content: '';
+				display: block;
+				width: 30px;
+				position: absolute;
+				top: 0;
+				left: 0;
+				bottom: 0;
+				background-color: var(--accent);
 			}
 			
-			&.selected:focus {
+			&#cat-all::before	{ mask: var(--all) no-repeat center center; }
+			&#cat-fav::before	{ mask: var(--favorite) no-repeat center center; }
+			&#cat-none::before	{ mask: var(--none) no-repeat center center; }
+			
+			&.selected,
+			&:focus {
 				
-				&#cat-all	{ background-image: var(--all-selected); }
-				&#cat-fav	{ background-image: var(--favorite-selected); }
-				&#cat-none	{ background-image: var(--none-selected); }
+				&::before {
+					
+					background-color: #fff;
+				}
 			}
 		}
 	}
@@ -237,6 +210,44 @@ footer {
 				
 				&.show { display: block; }
 			}
+		}
+	}
+	
+	.search-field {
+		
+		height: 48px;
+		padding: 8px 0;
+		position: relative;
+		
+		#search {
+			
+			color: var(--text-color);
+			width: 100%;
+			height: 28px;
+			font-size: 13px;
+			padding: 0 24px;
+			background: rgba(0,0,0,.1) var(--icon-search) no-repeat left 5px center;
+			border: 0;
+			border-radius: 6px;
+			box-shadow: inset 0 0 0 0.5px rgba(0,0,0,.1);
+			
+			&:focus {
+				
+				outline: none;
+				box-shadow: inset 0 0 0 0.5px rgba(0,0,0,.1), 0 0 0 3px var(--accent-light);
+			}
+		}
+		
+		button#clear {
+			
+			display: none;
+			width: 14px;
+			height: 14px;
+			background-color: rgba(0,0,0,.8);
+			mask: var(--icon-clear) no-repeat center center; 
+			position: absolute;
+			top: 15px;
+			right: 10px;
 		}
 	}
 }
@@ -573,7 +584,8 @@ aside {
 				display: block;
 				width: 14px;
 				height: 14px;
-				background: var(--favorite) no-repeat center;
+				background-color: var(--text);
+				mask: var(--favorite) no-repeat center center;
 				position: absolute;
 				top: 0;
 				left: 4px;
@@ -895,6 +907,7 @@ aside {
 			}
 		}
 		
+		#fixed-categories,
 		#categories {
 			
 			button {
@@ -912,6 +925,25 @@ aside {
 						background-color: #fff;
 					}
 				}
+			}
+		}
+		
+		.search-field {
+			
+			#search {
+				
+				box-shadow: inset 0 0 0 0.5px rgba(255,255,255,.15), inset 0 -1px 0 rgba(255,255,255,.2);
+				
+				&:focus {
+					
+					outline: none;
+					box-shadow: inset 0 0 0 0.5px rgba(0,0,0,.1), 0 0 0 3px var(--accent-light);
+				}
+			}
+			
+			button#clear {
+				
+				background-color: rgb(255,255,255);
 			}
 		}
 	}
@@ -939,6 +971,7 @@ aside {
 			}
 		}
 		
+		#fixed-categories,
 		#categories {
 			
 			button {
@@ -977,19 +1010,12 @@ aside {
 			
 			&.selected:focus {
 				
-				--text: #fff;
-				--text-light: rgba(255,255,255,.6);
-				
 				&[data-favorite=true] {
 					
 					.side-title::before {
 						
 						background-image: var(--favorite-selected);
 					}
-				}
-				
-				.side-cat {
-					
 				}
 			}
 		}
