--- a/app-source/scss/partials/_note.scss
+++ b/app-source/scss/partials/_note.scss
@@ -214,23 +214,77 @@
 	
 	table {
 		
+		border-collapse: unset;
+		
 		thead {
 			
-			background-color: var(--table-head);
-			font-weight: 700;
+			th {
+				
+				background-color: var(--table-head);
+				font-weight: 700;
+				border-top: 1px solid var(--table-border);
+				border-right: none;
+				
+				&:first-of-type {
+					
+					border-top-left-radius: 11px;
+				}
+				
+				&:last-of-type {
+					
+					border-top-right-radius: 11px;
+					border-right: 1px solid var(--table-border);
+				}
+			}
 		}
 		
 		tbody {
+			
+			tr {
+				
+				td {
+					
+					border: none;
+				}
+				
+				td + td {
+					
+					border-left: 1px solid var(--table-border);
+				}
+				
+				td:first-of-type {
+					
+					border-left: 1px solid var(--table-border);
+				}
+				
+				td:last-of-type {
+					
+					border-right: 1px solid var(--table-border);
+				}
+			}
 			
 			tr:nth-of-type(even) {
 				
 				background-color: var(--table-stripe);
 			}
-		}
-		
-		th, td {
 			
-			border-color: var(--table-border);
+			tr:last-of-type {
+				
+				td {
+					
+					border-bottom: 1px solid var(--table-border);
+				}
+				
+				td:first-of-type {
+					
+					border-bottom-left-radius: 11px;
+				}
+				
+				td:last-of-type {
+					
+					border-bottom-right-radius: 11px;
+				}
+			}
 		}
 	}
 }
@@ -272,6 +326,17 @@
 		mark {
 			
 			background-color: var(--app-dark);
+		}
+		
+		table {
+			
+			thead {
+				
+				th {
+					
+					border: none;
+				}
+			}
 		}
 	}
 }
