sidebar list styles
remove divider from last note in list / category

--- a/app-source/scss/partials/_interface.scss
+++ b/app-source/scss/partials/_interface.scss
@@ -648,6 +648,17 @@ aside {
 			.side-cat { display: none; }
 		}
 	}
+	
+	.last {
+		
+		button {
+			
+			&::after {
+				
+				display: none;
+			}
+		}
+	}
 }
 
 .EasyMDEContainer {
