--- a/app-source/scss/partials/_interface.scss
+++ b/app-source/scss/partials/_interface.scss
@@ -223,6 +223,9 @@ footer {
 		button#clear {
 			
 			display: none;
+			padding: 0;
+			margin: 0;
+			border: none;
 			width: 14px;
 			height: 14px;
 			background-color: rgba(0,0,0,.8);
