--- a/app-source/scss/partials/_vars-and-mixins.scss
+++ b/app-source/scss/partials/_vars-and-mixins.scss
@@ -9,7 +9,7 @@
 	--editor:				rgba(255,255,255,.8);
 	--main:					#ffffff;
 	--app-color-focus:		rgba(0,0,0,.1);
-	--dividers:				#e6e6e6;
+	--dividers:				rgba(0,0,0,.15);
 	--header-border:		#dcdcdc;
 	
 	--icons-enabled:		rgba(0,0,0,.55);
@@ -91,7 +91,7 @@
 	--editor:				rgba(0,0,0,.15);
 	--main:					rgba(30,30,30,.80);
 	--app-color-focus:		rgba(255,255,255,.1);
-	--dividers:				#484848;
+	--dividers:				rgba(255,255,255,.125);
 	--header-border:		rgba(0,0,0,.5);
 	
 	--icons-enabled:		rgba(255,255,255,.6);
